--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Benjioh5's ARK
+name: benjioh5's ARK
 
 # Short bio or description (displayed in the header)
 description: ~블록체인이라는 대 사기극~
