--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ google_analytics: UA-153765645-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: benjioh5.com/blog
+url: https://benjioh5.com/blog
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
