--- a/_config.yml
+++ b/_config.yml
@@ -62,13 +62,13 @@ google_analytics: UA-153765645-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: benjioh5.com/blog
+url: https://benjioh5.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: benjioh5.com/blog
+baseurl: /blog
 
 #
 # !! You don't need to change any of the configuration flags below !!
